# TerraEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_utils.cmake  conanfile.txt
core/: CMakeLists.txt
core/include/core/: engine.h
core/include/core/camera/: camera.h
core/include/core/common/: counter.h  ctor.h  defines.h  exception.h  hash.h  meta.h  named_type.h  pimpl.h  to_string.h
core/include/core/dg/: buffer.h  context.h  default_raw_memory_allocator.h  device.h  device_context.h  dg.h  errors.h  graphics_accessories.h  graphics_types.h  graphics_utilities.h  math.h  object_base.h  pipeline_state.h  rasterizer_state.h  render_device.h  sampler.h  shader.h  texture.h  texture_utilities.h  ucl.h
core/include/core/material/: material.h  material_builder.h  material_builder_desc.h  material_new.h  material_vars.h  material_view.h  microshader_loader.h  microshader_parser.h  microshader_types.h  render_target.h  shader_builder.h  texture.h  texture_manager.h  vdecl_item.h  vdecl_storage.h  vertex_decl.h
core/include/core/math/: advanced.h  basic.h  constants.h  equation.h  generator_type.h  generator_type_fwd.h  generator_type_operators.h  intersection.h  matrix.h  normal_matrix.h  numbers.h  random.h  types.h
core/include/core/path/: path.h
core/include/core/render/: geometry.h  index_buffer.h  render_target.h  scene.h  target.h  transform_graph.h  vertex_buffer.h  vertexes.h
core/include/core/scene/: geometry.h  geometry_node.h  index_buffer.h  material_instance.h  material_node.h  scene.h  transform_graph.h  vertex_buffer.h  vertexes.h
core/include/core/str/: to_string.h
core/src/: engine.cpp
core/src/camera/: camera.cpp
core/src/common/: meta.cpp  path.cpp  timer.cpp  to_string.cpp
core/src/material/: material.cpp  material_builder.cpp  material_new.cpp  material_vars.cpp  material_view.cpp  microshader_loader.cpp  microshader_parser.cpp  microshader_types.cpp  render_target.cpp  shader_builder.cpp  texture.cpp  texture_manager.cpp  vdecl_item.cpp  vdecl_storage.cpp  vertex_decl.cpp
core/src/math/: advanced.cpp  basic.cpp  equation.cpp  intersection.cpp  matrix.cpp  normal_matrix.cpp  types.cpp
core/src/path/: path.cpp
core/src/render/: geometry.cpp  index_buffer.cpp  render_target.cpp  scene.cpp  target.cpp  transform_graph.cpp  vertex_buffer.cpp  vertexes.cpp
core/src/scene/: geometry.cpp  geometry_node.cpp  index_buffer.cpp  material_instance.cpp  material_node.cpp  scene.cpp  transform_graph.cpp  vertex_buffer.cpp  vertexes.cpp
core/src/str/: to_string.cpp
core/test/: gtest.h  test_helpers.h  test_math_advanced.cpp  test_math_equation.cpp  test_math_intersection.cpp  test_math_numbers.cpp  test_math_types.cpp  test_microshader_advanced.cpp  test_microshader_types.cpp
editor/: CMakeLists.txt
editor/include/editor/: editor.h  editor_scene_controller.h  general_scene.h  preview_scene.h  test_code.h
editor/include/editor/windows/: graph_window.h  gschema_window.h  panel_window.h  preview_window.h  property_window.h  scene_window.h
editor/src/: editor.cpp  editor.h  editor_scene.cpp  editor_scene.h  editor_scene_controller.cpp  editor_scene_controller.h  general_scene.cpp  general_scene.h  general_scene_controller.cpp  general_scene_controller.h  graph_window.cpp  graph_window.h  gschema_window.cpp  main.cpp  preview_scene.cpp  preview_scene.h  preview_window.cpp  preview_window.h  property_window.cpp  property_window.h  test_code.cpp
editor/src/windows/: graph_window.cpp  gschema_window.cpp  panel_window.cpp  preview_window.cpp  property_window.cpp  scene_window.cpp
middleware/: CMakeLists.txt
middleware/include/middleware/camera/: editor_controller.h  fly_controller.h
middleware/include/middleware/generator/: cone_shape.h  cube_shape.h  cylinder_shape.h  empty_shape.h  generator.h  generator_register.h  gs_register.h  merge_shape.h  mesh_generator.h  plane_shape.h  shape.h  shape_builder.h  shape_generator.h  sphere_shape.h  torus_shape.h  uv_grid_generator.h  vertex_eval_applyer.h
middleware/include/middleware/gizmo/: gizmo_3d.h  gizmo_base.h  gizmo_move.h  gizmo_rotate.h  gizmo_scale.h  gizmo_shape.h
middleware/include/middleware/graph_editor/: graph_editor.h  graph_node.h  graph_node_factory.h  graph_node_preview.h  graph_selected_node.h  graph_storage.h  node_preview.h
middleware/include/middleware/imgui/: button.h  combo_box.h  field.h  font.h  gui.h  gui_helpers.h  icon.h  image.h  imgui_internal.h  imgui_math.h  imgui_node_editor.h  label.h  layout.h  style.h  widgets.h
middleware/include/middleware/std_material/: std_material.h  std_material_new.h
middleware/include/middleware/std_render/: std_material.h  std_scene.h  structures.h
middleware/src/camera/: editor_controller.cpp  fly_controller.cpp
middleware/src/generator/: cone_shape.cpp  cube_shape.cpp  cylinder_shape.cpp  generator_register.cpp  gs_register.cpp  plane_shape.cpp  shape.cpp  shape_builder.cpp  sphere_shape.cpp  torus_shape.cpp  uv_grid_generator.cpp
middleware/src/generator/mesh/: cone_shape.cpp  cube_shape.cpp  cylinder_shape.cpp  plane_shape.cpp  shape.cpp  shape_builder.cpp  sphere_shape.cpp  torus_shape.cpp  uv_grid_generator.cpp
middleware/src/gizmo/: gizmo_3d.cpp  gizmo_move.cpp  gizmo_rotate.cpp  gizmo_scale.cpp  gizmo_shape.cpp
middleware/src/graph_editor/: graph_editor.cpp  graph_node.cpp  graph_selected_node.cpp  graph_storage.cpp  node_preview.cpp
middleware/src/gscheme/editor/: gs_id.cpp  (+7 more)
middleware/src/imgui/: button.cpp  combo_box.cpp  field.cpp  gui.cpp  gui_helpers.cpp  gui_helpers.h  icon.cpp  image.cpp  imgui_math.cpp  label.cpp  layout.cpp  style.cpp  widget_draw.cpp  widget_draw.h  widget_placement.cpp  widget_placement.h  widgets.cpp
middleware/src/std_material/: std_material.cpp  std_material_new.cpp
middleware/src/std_render/: std_material.cpp  std_scene.cpp
middleware/test/: gtest.h  middleware_test_main.cpp  test_gs_convert.cpp  test_gs_convert_storage.cpp  test_gs_funcs.cpp  test_gs_graph.cpp  test_gs_types.cpp  test_gs_types_convert.cpp  test_gs_types_convert_storage.cpp  test_noise.cpp
(+354 files in other folders)
